--- a/pytorch/detailed about gradient descent.ipynb
+++ b/pytorch/detailed about gradient descent.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -134,24 +134,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ephoch    0/10 W: 0.000, Cost: 4.666667\n",
-      "Ephoch    1/10 W: 0.000, Cost: 4.666667\n",
-      "Ephoch    2/10 W: 0.000, Cost: 4.666667\n",
-      "Ephoch    3/10 W: 0.000, Cost: 4.666667\n",
-      "Ephoch    4/10 W: 0.000, Cost: 4.666667\n",
-      "Ephoch    5/10 W: 0.000, Cost: 4.666667\n",
-      "Ephoch    6/10 W: 0.000, Cost: 4.666667\n",
-      "Ephoch    7/10 W: 0.000, Cost: 4.666667\n",
-      "Ephoch    8/10 W: 0.000, Cost: 4.666667\n",
-      "Ephoch    9/10 W: 0.000, Cost: 4.666667\n",
-      "Ephoch   10/10 W: 0.000, Cost: 4.666667\n"
+      "Ephoch    0/10 w: 0.000, Cost: 4.666667\n",
+      "Ephoch    1/10 w: 1.400, Cost: 0.746667\n",
+      "Ephoch    2/10 w: 0.840, Cost: 0.119467\n",
+      "Ephoch    3/10 w: 1.064, Cost: 0.019115\n",
+      "Ephoch    4/10 w: 0.974, Cost: 0.003058\n",
+      "Ephoch    5/10 w: 1.010, Cost: 0.000489\n",
+      "Ephoch    6/10 w: 0.996, Cost: 0.000078\n",
+      "Ephoch    7/10 w: 1.002, Cost: 0.000013\n",
+      "Ephoch    8/10 w: 0.999, Cost: 0.000002\n",
+      "Ephoch    9/10 w: 1.000, Cost: 0.000000\n",
+      "Ephoch   10/10 w: 1.000, Cost: 0.000000\n"
      ]
     }
    ],
@@ -162,20 +162,27 @@
     "w= torch.zeros(1, requires_grad = True)\n",
     "\n",
     "#initialized optimizer\n",
-    "optimizer = torch.optim.SGD([W], lr=0.15)\n",
+    "optimizer = torch.optim.SGD([w], lr=0.15)\n",
     "\n",
     "nb_epochs = 10\n",
     "for epoch in range(nb_epochs + 1):\n",
     "    hypothesis = x_train * w\n",
     "    cost = torch.mean((hypothesis - y_train)**2)\n",
     "    \n",
-    "    print(\"Ephoch {:4d}/{} W: {:.3f}, Cost: {:.6f}\".format(epoch, nb_epochs, w.item(), cost.item()))\n",
+    "    print(\"Ephoch {:4d}/{} w: {:.3f}, Cost: {:.6f}\".format(epoch, nb_epochs, w.item(), cost.item()))\n",
     "    \n",
     "    # improve H(x) with cost\n",
     "    optimizer.zero_grad()  #initialized gradient with 0\n",
     "    cost.backward()        #calculate gradient by cost's differential\n",
     "    optimizer.step()       #gradient descent"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
