--- a/pytorch/multivariable linear regression using nn.module.ipynb
+++ b/pytorch/multivariable linear regression using nn.module.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,53 +47,41 @@
     "                            [96, 98, 100],\n",
     "                            [73, 66, 70]])\n",
     "y_train = torch.FloatTensor([[152], [185], [180], [196], [142]])\n",
+    "\n",
     "# initialize model\n",
     "model = MultivariateLinearRegressionModel()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'W' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-4f651bb87bae>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# optimizer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0moptimizer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptim\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSGD\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlr\u001b[0m \u001b[1;33m=\u001b[0m\u001b[1;36m1e-5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'W' is not defined"
+     ]
+    }
+   ],
    "source": [
+    "# initialized model\n",
+    "W = torch.zeros((3,1), requires_grad = True)\n",
+    "b = torch.zeros(1,requires_grad = True)\n",
     "# optimizer\n",
     "optimizer = torch.optim.SGD([W,b], lr =1e-5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ephoch    0/20 hypothesis: tensor([-56.8668, -66.1697, -66.4665, -70.7001, -51.2999]), Cost: 55190.210938\n",
-      "Ephoch    1/20 hypothesis: tensor([-56.8668, -66.1697, -66.4665, -70.7001, -51.2999]), Cost: 55190.210938\n",
-      "Ephoch    2/20 hypothesis: tensor([-56.8668, -66.1697, -66.4665, -70.7001, -51.2999]), Cost: 55190.210938\n",
-      "Ephoch    3/20 hypothesis: tensor([-56.8668, -66.1697, -66.4665, -70.7001, -51.2999]), Cost: 55190.210938\n",
-      "Ephoch    4/20 hypothesis: tensor([-56.8668, -66.1697, -66.4665, -70.7001, -51.2999]), Cost: 55190.210938\n",
-      "Ephoch    5/20 hypothesis: tensor([-56.8668, -66.1697, -66.4665, -70.7001, -51.2999]), Cost: 55190.210938\n",
-      "Ephoch    6/20 hypothesis: tensor([-56.8668, -66.1697, -66.4665, -70.7001, -51.2999]), Cost: 55190.210938\n",
-      "Ephoch    7/20 hypothesis: tensor([-56.8668, -66.1697, -66.4665, -70.7001, -51.2999]), Cost: 55190.210938\n",
-      "Ephoch    8/20 hypothesis: tensor([-56.8668, -66.1697, -66.4665, -70.7001, -51.2999]), Cost: 55190.210938\n",
-      "Ephoch    9/20 hypothesis: tensor([-56.8668, -66.1697, -66.4665, -70.7001, -51.2999]), Cost: 55190.210938\n",
-      "Ephoch   10/20 hypothesis: tensor([-56.8668, -66.1697, -66.4665, -70.7001, -51.2999]), Cost: 55190.210938\n",
-      "Ephoch   11/20 hypothesis: tensor([-56.8668, -66.1697, -66.4665, -70.7001, -51.2999]), Cost: 55190.210938\n",
-      "Ephoch   12/20 hypothesis: tensor([-56.8668, -66.1697, -66.4665, -70.7001, -51.2999]), Cost: 55190.210938\n",
-      "Ephoch   13/20 hypothesis: tensor([-56.8668, -66.1697, -66.4665, -70.7001, -51.2999]), Cost: 55190.210938\n",
-      "Ephoch   14/20 hypothesis: tensor([-56.8668, -66.1697, -66.4665, -70.7001, -51.2999]), Cost: 55190.210938\n",
-      "Ephoch   15/20 hypothesis: tensor([-56.8668, -66.1697, -66.4665, -70.7001, -51.2999]), Cost: 55190.210938\n",
-      "Ephoch   16/20 hypothesis: tensor([-56.8668, -66.1697, -66.4665, -70.7001, -51.2999]), Cost: 55190.210938\n",
-      "Ephoch   17/20 hypothesis: tensor([-56.8668, -66.1697, -66.4665, -70.7001, -51.2999]), Cost: 55190.210938\n",
-      "Ephoch   18/20 hypothesis: tensor([-56.8668, -66.1697, -66.4665, -70.7001, -51.2999]), Cost: 55190.210938\n",
-      "Ephoch   19/20 hypothesis: tensor([-56.8668, -66.1697, -66.4665, -70.7001, -51.2999]), Cost: 55190.210938\n",
-      "Ephoch   20/20 hypothesis: tensor([-56.8668, -66.1697, -66.4665, -70.7001, -51.2999]), Cost: 55190.210938\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nb_epochs = 20\n",
     "for epoch in range(nb_epochs + 1):\n",
