--- a/pytorch/logistic regression.ipynb
+++ b/pytorch/logistic regression.ipynb
@@ -199,7 +199,7 @@
     }
    ],
    "source": [
-    "print('e^1 equals: ', torch.exp(torch.FloatTensor([[1,2],[3,4]])))"
+    "print('e^1 equals: ', torch.exp(torch.FloatTensor([1])))"
    ]
   },
   {
