--- a/pytorch/operate softmax classification.ipynb
+++ b/pytorch/operate softmax classification.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,29 +31,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x2c0a2336db0>"
+       "<torch._C.Generator at 0x1c2f8c76de0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "torch.manual_seed(1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Training with low-level cross entropy loss"
    ]
   },
   {
@@ -114,6 +107,7 @@
    ],
    "source": [
     "y_one_hot = torch.zeros(8, 3)\n",
+    "### hypothesis와 같은 크기로 생성\n",
     "y_one_hot.scatter_(1, y_train.unsqueeze(1), 1)\n",
     "print(y_one_hot.shape)"
    ]
