--- a/pytorch/loading data.ipynb
+++ b/pytorch/loading data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,69 +77,279 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ephoch    0/20 Batch: 1/3, Cost: 1.475699\n",
-      "Ephoch    0/20 Batch: 2/3, Cost: 2.085504\n",
-      "Ephoch    0/20 Batch: 3/3, Cost: 1.281709\n",
-      "Ephoch    1/20 Batch: 1/3, Cost: 0.317429\n",
-      "Ephoch    1/20 Batch: 2/3, Cost: 1.971729\n",
-      "Ephoch    1/20 Batch: 3/3, Cost: 4.236300\n",
-      "Ephoch    2/20 Batch: 1/3, Cost: 2.181867\n",
-      "Ephoch    2/20 Batch: 2/3, Cost: 1.866292\n",
-      "Ephoch    2/20 Batch: 3/3, Cost: 2.271888\n",
-      "Ephoch    3/20 Batch: 1/3, Cost: 1.809999\n",
-      "Ephoch    3/20 Batch: 2/3, Cost: 1.427386\n",
-      "Ephoch    3/20 Batch: 3/3, Cost: 2.168267\n",
-      "Ephoch    4/20 Batch: 1/3, Cost: 1.623167\n",
-      "Ephoch    4/20 Batch: 2/3, Cost: 2.361641\n",
-      "Ephoch    4/20 Batch: 3/3, Cost: 0.597710\n",
-      "Ephoch    5/20 Batch: 1/3, Cost: 1.521181\n",
-      "Ephoch    5/20 Batch: 2/3, Cost: 2.337849\n",
-      "Ephoch    5/20 Batch: 3/3, Cost: 0.630155\n",
-      "Ephoch    6/20 Batch: 1/3, Cost: 1.417077\n",
-      "Ephoch    6/20 Batch: 2/3, Cost: 2.312393\n",
-      "Ephoch    6/20 Batch: 3/3, Cost: 1.047799\n",
-      "Ephoch    7/20 Batch: 1/3, Cost: 2.503681\n",
-      "Ephoch    7/20 Batch: 2/3, Cost: 0.823163\n",
-      "Ephoch    7/20 Batch: 3/3, Cost: 3.496026\n",
-      "Ephoch    8/20 Batch: 1/3, Cost: 1.441892\n",
-      "Ephoch    8/20 Batch: 2/3, Cost: 3.104344\n",
-      "Ephoch    8/20 Batch: 3/3, Cost: 2.811107\n",
-      "Ephoch    9/20 Batch: 1/3, Cost: 1.576876\n",
-      "Ephoch    9/20 Batch: 2/3, Cost: 2.258581\n",
-      "Ephoch    9/20 Batch: 3/3, Cost: 0.649291\n",
-      "Ephoch   10/20 Batch: 1/3, Cost: 0.367139\n",
-      "Ephoch   10/20 Batch: 2/3, Cost: 2.729707\n",
-      "Ephoch   10/20 Batch: 3/3, Cost: 2.385652\n",
-      "Ephoch   11/20 Batch: 1/3, Cost: 1.805541\n",
-      "Ephoch   11/20 Batch: 2/3, Cost: 2.816223\n",
-      "Ephoch   11/20 Batch: 3/3, Cost: 3.010545\n",
-      "Ephoch   12/20 Batch: 1/3, Cost: 0.398250\n",
-      "Ephoch   12/20 Batch: 2/3, Cost: 2.763644\n",
-      "Ephoch   12/20 Batch: 3/3, Cost: 2.394616\n",
-      "Ephoch   13/20 Batch: 1/3, Cost: 1.778629\n",
-      "Ephoch   13/20 Batch: 2/3, Cost: 1.644137\n",
-      "Ephoch   13/20 Batch: 3/3, Cost: 1.549671\n",
-      "Ephoch   14/20 Batch: 1/3, Cost: 1.507331\n",
-      "Ephoch   14/20 Batch: 2/3, Cost: 0.724473\n",
-      "Ephoch   14/20 Batch: 3/3, Cost: 4.952690\n",
-      "Ephoch   15/20 Batch: 1/3, Cost: 1.805533\n",
-      "Ephoch   15/20 Batch: 2/3, Cost: 1.330247\n",
-      "Ephoch   15/20 Batch: 3/3, Cost: 1.955884\n",
-      "Ephoch   16/20 Batch: 1/3, Cost: 2.470805\n",
-      "Ephoch   16/20 Batch: 2/3, Cost: 1.422843\n",
-      "Ephoch   16/20 Batch: 3/3, Cost: 0.895492\n",
-      "Ephoch   17/20 Batch: 1/3, Cost: 2.520097\n",
-      "Ephoch   17/20 Batch: 2/3, Cost: 1.431787\n",
-      "Ephoch   17/20 Batch: 3/3, Cost: 0.872538\n",
-      "Ephoch   18/20 Batch: 1/3, Cost: 2.611847\n",
-      "Ephoch   18/20 Batch: 2/3, Cost: 1.398691\n",
-      "Ephoch   18/20 Batch: 3/3, Cost: 0.546119\n",
-      "Ephoch   19/20 Batch: 1/3, Cost: 2.317628\n",
-      "Ephoch   19/20 Batch: 2/3, Cost: 1.396489\n",
-      "Ephoch   19/20 Batch: 3/3, Cost: 0.960601\n",
-      "Ephoch   20/20 Batch: 1/3, Cost: 3.938857\n",
-      "Ephoch   20/20 Batch: 2/3, Cost: 1.694548\n",
-      "Ephoch   20/20 Batch: 3/3, Cost: 0.534432\n"
+      "0\n",
+      "[tensor([[93., 88., 93.],\n",
+      "        [73., 66., 70.]]), tensor([[185.],\n",
+      "        [142.]])]\n",
+      "Ephoch    0/20 Batch: 1/3, Cost: 27194.500000\n",
+      "1\n",
+      "[tensor([[89., 91., 90.],\n",
+      "        [73., 80., 75.]]), tensor([[180.],\n",
+      "        [152.]])]\n",
+      "Ephoch    0/20 Batch: 2/3, Cost: 9937.548828\n",
+      "2\n",
+      "[tensor([[ 96.,  98., 100.]]), tensor([[196.]])]\n",
+      "Ephoch    0/20 Batch: 3/3, Cost: 4680.304199\n",
+      "0\n",
+      "[tensor([[ 96.,  98., 100.],\n",
+      "        [ 93.,  88.,  93.]]), tensor([[196.],\n",
+      "        [185.]])]\n",
+      "Ephoch    1/20 Batch: 1/3, Cost: 849.531982\n",
+      "1\n",
+      "[tensor([[73., 66., 70.],\n",
+      "        [73., 80., 75.]]), tensor([[142.],\n",
+      "        [152.]])]\n",
+      "Ephoch    1/20 Batch: 2/3, Cost: 117.891594\n",
+      "2\n",
+      "[tensor([[89., 91., 90.]]), tensor([[180.]])]\n",
+      "Ephoch    1/20 Batch: 3/3, Cost: 56.102924\n",
+      "0\n",
+      "[tensor([[73., 80., 75.],\n",
+      "        [93., 88., 93.]]), tensor([[152.],\n",
+      "        [185.]])]\n",
+      "Ephoch    2/20 Batch: 1/3, Cost: 24.566746\n",
+      "1\n",
+      "[tensor([[ 89.,  91.,  90.],\n",
+      "        [ 96.,  98., 100.]]), tensor([[180.],\n",
+      "        [196.]])]\n",
+      "Ephoch    2/20 Batch: 2/3, Cost: 2.935654\n",
+      "2\n",
+      "[tensor([[73., 66., 70.]]), tensor([[142.]])]\n",
+      "Ephoch    2/20 Batch: 3/3, Cost: 10.413364\n",
+      "0\n",
+      "[tensor([[ 96.,  98., 100.],\n",
+      "        [ 73.,  66.,  70.]]), tensor([[196.],\n",
+      "        [142.]])]\n",
+      "Ephoch    3/20 Batch: 1/3, Cost: 2.733990\n",
+      "1\n",
+      "[tensor([[89., 91., 90.],\n",
+      "        [93., 88., 93.]]), tensor([[180.],\n",
+      "        [185.]])]\n",
+      "Ephoch    3/20 Batch: 2/3, Cost: 1.454178\n",
+      "2\n",
+      "[tensor([[73., 80., 75.]]), tensor([[152.]])]\n",
+      "Ephoch    3/20 Batch: 3/3, Cost: 0.572385\n",
+      "0\n",
+      "[tensor([[89., 91., 90.],\n",
+      "        [93., 88., 93.]]), tensor([[180.],\n",
+      "        [185.]])]\n",
+      "Ephoch    4/20 Batch: 1/3, Cost: 1.555809\n",
+      "1\n",
+      "[tensor([[73., 66., 70.],\n",
+      "        [73., 80., 75.]]), tensor([[142.],\n",
+      "        [152.]])]\n",
+      "Ephoch    4/20 Batch: 2/3, Cost: 2.132504\n",
+      "2\n",
+      "[tensor([[ 96.,  98., 100.]]), tensor([[196.]])]\n",
+      "Ephoch    4/20 Batch: 3/3, Cost: 1.480298\n",
+      "0\n",
+      "[tensor([[89., 91., 90.],\n",
+      "        [73., 66., 70.]]), tensor([[180.],\n",
+      "        [142.]])]\n",
+      "Ephoch    5/20 Batch: 1/3, Cost: 2.674296\n",
+      "1\n",
+      "[tensor([[73., 80., 75.],\n",
+      "        [93., 88., 93.]]), tensor([[152.],\n",
+      "        [185.]])]\n",
+      "Ephoch    5/20 Batch: 2/3, Cost: 1.314253\n",
+      "2\n",
+      "[tensor([[ 96.,  98., 100.]]), tensor([[196.]])]\n",
+      "Ephoch    5/20 Batch: 3/3, Cost: 1.264115\n",
+      "0\n",
+      "[tensor([[89., 91., 90.],\n",
+      "        [73., 80., 75.]]), tensor([[180.],\n",
+      "        [152.]])]\n",
+      "Ephoch    6/20 Batch: 1/3, Cost: 0.138546\n",
+      "1\n",
+      "[tensor([[73., 66., 70.],\n",
+      "        [93., 88., 93.]]), tensor([[142.],\n",
+      "        [185.]])]\n",
+      "Ephoch    6/20 Batch: 2/3, Cost: 4.987776\n",
+      "2\n",
+      "[tensor([[ 96.,  98., 100.]]), tensor([[196.]])]\n",
+      "Ephoch    6/20 Batch: 3/3, Cost: 1.780451\n",
+      "0\n",
+      "[tensor([[93., 88., 93.],\n",
+      "        [89., 91., 90.]]), tensor([[185.],\n",
+      "        [180.]])]\n",
+      "Ephoch    7/20 Batch: 1/3, Cost: 1.695418\n",
+      "1\n",
+      "[tensor([[ 96.,  98., 100.],\n",
+      "        [ 73.,  66.,  70.]]), tensor([[196.],\n",
+      "        [142.]])]\n",
+      "Ephoch    7/20 Batch: 2/3, Cost: 2.382248\n",
+      "2\n",
+      "[tensor([[73., 80., 75.]]), tensor([[152.]])]\n",
+      "Ephoch    7/20 Batch: 3/3, Cost: 0.583801\n",
+      "0\n",
+      "[tensor([[ 96.,  98., 100.],\n",
+      "        [ 73.,  80.,  75.]]), tensor([[196.],\n",
+      "        [152.]])]\n",
+      "Ephoch    8/20 Batch: 1/3, Cost: 0.377575\n",
+      "1\n",
+      "[tensor([[89., 91., 90.],\n",
+      "        [93., 88., 93.]]), tensor([[180.],\n",
+      "        [185.]])]\n",
+      "Ephoch    8/20 Batch: 2/3, Cost: 1.920301\n",
+      "2\n",
+      "[tensor([[73., 66., 70.]]), tensor([[142.]])]\n",
+      "Ephoch    8/20 Batch: 3/3, Cost: 4.180333\n",
+      "0\n",
+      "[tensor([[89., 91., 90.],\n",
+      "        [93., 88., 93.]]), tensor([[180.],\n",
+      "        [185.]])]\n",
+      "Ephoch    9/20 Batch: 1/3, Cost: 1.413966\n",
+      "1\n",
+      "[tensor([[ 73.,  66.,  70.],\n",
+      "        [ 96.,  98., 100.]]), tensor([[142.],\n",
+      "        [196.]])]\n",
+      "Ephoch    9/20 Batch: 2/3, Cost: 2.329769\n",
+      "2\n",
+      "[tensor([[73., 80., 75.]]), tensor([[152.]])]\n",
+      "Ephoch    9/20 Batch: 3/3, Cost: 1.009023\n",
+      "0\n",
+      "[tensor([[ 96.,  98., 100.],\n",
+      "        [ 73.,  80.,  75.]]), tensor([[196.],\n",
+      "        [152.]])]\n",
+      "Ephoch   10/20 Batch: 1/3, Cost: 0.635443\n",
+      "1\n",
+      "[tensor([[93., 88., 93.],\n",
+      "        [73., 66., 70.]]), tensor([[185.],\n",
+      "        [142.]])]\n",
+      "Ephoch   10/20 Batch: 2/3, Cost: 4.229226\n",
+      "2\n",
+      "[tensor([[89., 91., 90.]]), tensor([[180.]])]\n",
+      "Ephoch   10/20 Batch: 3/3, Cost: 1.747337\n",
+      "0\n",
+      "[tensor([[ 73.,  66.,  70.],\n",
+      "        [ 96.,  98., 100.]]), tensor([[142.],\n",
+      "        [196.]])]\n",
+      "Ephoch   11/20 Batch: 1/3, Cost: 2.461205\n",
+      "1\n",
+      "[tensor([[89., 91., 90.],\n",
+      "        [73., 80., 75.]]), tensor([[180.],\n",
+      "        [152.]])]\n",
+      "Ephoch   11/20 Batch: 2/3, Cost: 0.619275\n",
+      "2\n",
+      "[tensor([[93., 88., 93.]]), tensor([[185.]])]\n",
+      "Ephoch   11/20 Batch: 3/3, Cost: 3.062286\n",
+      "0\n",
+      "[tensor([[89., 91., 90.],\n",
+      "        [93., 88., 93.]]), tensor([[180.],\n",
+      "        [185.]])]\n",
+      "Ephoch   12/20 Batch: 1/3, Cost: 1.332591\n",
+      "1\n",
+      "[tensor([[ 73.,  66.,  70.],\n",
+      "        [ 96.,  98., 100.]]), tensor([[142.],\n",
+      "        [196.]])]\n",
+      "Ephoch   12/20 Batch: 2/3, Cost: 2.302595\n",
+      "2\n",
+      "[tensor([[73., 80., 75.]]), tensor([[152.]])]\n",
+      "Ephoch   12/20 Batch: 3/3, Cost: 0.939896\n",
+      "0\n",
+      "[tensor([[73., 66., 70.],\n",
+      "        [93., 88., 93.]]), tensor([[142.],\n",
+      "        [185.]])]\n",
+      "Ephoch   13/20 Batch: 1/3, Cost: 3.040952\n",
+      "1\n",
+      "[tensor([[ 96.,  98., 100.],\n",
+      "        [ 73.,  80.,  75.]]), tensor([[196.],\n",
+      "        [152.]])]\n",
+      "Ephoch   13/20 Batch: 2/3, Cost: 2.213173\n",
+      "2\n",
+      "[tensor([[89., 91., 90.]]), tensor([[180.]])]\n",
+      "Ephoch   13/20 Batch: 3/3, Cost: 0.687890\n",
+      "0\n",
+      "[tensor([[73., 80., 75.],\n",
+      "        [93., 88., 93.]]), tensor([[152.],\n",
+      "        [185.]])]\n",
+      "Ephoch   14/20 Batch: 1/3, Cost: 1.739041\n",
+      "1\n",
+      "[tensor([[73., 66., 70.],\n",
+      "        [89., 91., 90.]]), tensor([[142.],\n",
+      "        [180.]])]\n",
+      "Ephoch   14/20 Batch: 2/3, Cost: 2.280957\n",
+      "2\n",
+      "[tensor([[ 96.,  98., 100.]]), tensor([[196.]])]\n",
+      "Ephoch   14/20 Batch: 3/3, Cost: 1.202137\n",
+      "0\n",
+      "[tensor([[89., 91., 90.],\n",
+      "        [73., 66., 70.]]), tensor([[180.],\n",
+      "        [142.]])]\n",
+      "Ephoch   15/20 Batch: 1/3, Cost: 2.702014\n",
+      "1\n",
+      "[tensor([[73., 80., 75.],\n",
+      "        [93., 88., 93.]]), tensor([[152.],\n",
+      "        [185.]])]\n",
+      "Ephoch   15/20 Batch: 2/3, Cost: 1.321314\n",
+      "2\n",
+      "[tensor([[ 96.,  98., 100.]]), tensor([[196.]])]\n",
+      "Ephoch   15/20 Batch: 3/3, Cost: 1.218185\n",
+      "0\n",
+      "[tensor([[ 73.,  80.,  75.],\n",
+      "        [ 96.,  98., 100.]]), tensor([[152.],\n",
+      "        [196.]])]\n",
+      "Ephoch   16/20 Batch: 1/3, Cost: 0.154641\n",
+      "1\n",
+      "[tensor([[89., 91., 90.],\n",
+      "        [73., 66., 70.]]), tensor([[180.],\n",
+      "        [142.]])]\n",
+      "Ephoch   16/20 Batch: 2/3, Cost: 2.974227\n",
+      "2\n",
+      "[tensor([[93., 88., 93.]]), tensor([[185.]])]\n",
+      "Ephoch   16/20 Batch: 3/3, Cost: 2.661544\n",
+      "0\n",
+      "[tensor([[73., 66., 70.],\n",
+      "        [73., 80., 75.]]), tensor([[142.],\n",
+      "        [152.]])]\n",
+      "Ephoch   17/20 Batch: 1/3, Cost: 1.790150\n",
+      "1\n",
+      "[tensor([[ 93.,  88.,  93.],\n",
+      "        [ 96.,  98., 100.]]), tensor([[185.],\n",
+      "        [196.]])]\n",
+      "Ephoch   17/20 Batch: 2/3, Cost: 1.618083\n",
+      "2\n",
+      "[tensor([[89., 91., 90.]]), tensor([[180.]])]\n",
+      "Ephoch   17/20 Batch: 3/3, Cost: 1.521460\n",
+      "0\n",
+      "[tensor([[93., 88., 93.],\n",
+      "        [89., 91., 90.]]), tensor([[185.],\n",
+      "        [180.]])]\n",
+      "Ephoch   18/20 Batch: 1/3, Cost: 1.517171\n",
+      "1\n",
+      "[tensor([[ 96.,  98., 100.],\n",
+      "        [ 73.,  66.,  70.]]), tensor([[196.],\n",
+      "        [142.]])]\n",
+      "Ephoch   18/20 Batch: 2/3, Cost: 2.319186\n",
+      "2\n",
+      "[tensor([[73., 80., 75.]]), tensor([[152.]])]\n",
+      "Ephoch   18/20 Batch: 3/3, Cost: 0.609803\n",
+      "0\n",
+      "[tensor([[73., 80., 75.],\n",
+      "        [93., 88., 93.]]), tensor([[152.],\n",
+      "        [185.]])]\n",
+      "Ephoch   19/20 Batch: 1/3, Cost: 1.400038\n",
+      "1\n",
+      "[tensor([[89., 91., 90.],\n",
+      "        [73., 66., 70.]]), tensor([[180.],\n",
+      "        [142.]])]\n",
+      "Ephoch   19/20 Batch: 2/3, Cost: 2.185876\n",
+      "2\n",
+      "[tensor([[ 96.,  98., 100.]]), tensor([[196.]])]\n",
+      "Ephoch   19/20 Batch: 3/3, Cost: 1.404183\n",
+      "0\n",
+      "[tensor([[ 96.,  98., 100.],\n",
+      "        [ 89.,  91.,  90.]]), tensor([[196.],\n",
+      "        [180.]])]\n",
+      "Ephoch   20/20 Batch: 1/3, Cost: 0.223504\n",
+      "1\n",
+      "[tensor([[73., 80., 75.],\n",
+      "        [93., 88., 93.]]), tensor([[152.],\n",
+      "        [185.]])]\n",
+      "Ephoch   20/20 Batch: 2/3, Cost: 2.126798\n",
+      "2\n",
+      "[tensor([[73., 66., 70.]]), tensor([[142.]])]\n",
+      "Ephoch   20/20 Batch: 3/3, Cost: 4.271107\n"
      ]
     }
    ],
@@ -147,6 +357,8 @@
     "nb_epochs = 20\n",
     "for epoch in range(nb_epochs + 1):\n",
     "    for batch_idx, samples in enumerate(dataloader):\n",
+    "        print(batch_idx)\n",
+    "        print(samples)\n",
     "        x_train, y_train = samples\n",
     "        hypothesis = x_train.matmul(W) + b\n",
     "        cost = torch.mean((hypothesis - y_train)**2)\n",
