--- a/pytorch/CNN_MNIST.ipynb
+++ b/pytorch/CNN_MNIST.ipynb
@@ -154,7 +154,7 @@
    "source": [
     "total_batch = len(data_loader)\n",
     "print('총 배치의 수 : {}'.format(total_batch))\n",
-    "#배치의 수: iterator"
+    "#배치의 수: iterator = len(data_loader)"
    ]
   },
   {
