--- a/pytorch/MNIST.ipynb
+++ b/pytorch/MNIST.ipynb
@@ -113,7 +113,8 @@
    "outputs": [],
    "source": [
     "# 비용 함수와 옵티마이저 정의\n",
-    "criterion = nn.CrossEntropyLoss().to(device) # 내부적으로 소프트맥스 함수를 포함하고 있음.\n",
+    "criterion = nn.CrossEntropyLoss().to(device) \n",
+    "# 내부적으로 소프트맥스 함수를 포함하고 있음.\n",
     "optimizer = torch.optim.SGD(linear.parameters(), lr=0.1)"
    ]
   },
@@ -213,7 +214,7 @@
     }
    ],
    "source": [
-    "# 테스트 데이터를 사용하여 모델을 테스트한다.\n",
+    "# 테스트 데이터를 사용하여 모델을 비교하여 테스트한다.\n",
     "with torch.no_grad(): # torch.no_grad()를 하면 gradient 계산을 수행하지 않는다.\n",
     "    X_test = mnist_test.test_data.view(-1, 28 * 28).float().to(device)\n",
     "    Y_test = mnist_test.test_labels.to(device)\n",
